# riscv-kernel

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  compile_commands.json  linker.ld
.cache/clangd/index/: main.cpp.3817C2BCFB480BB4.idx  start.S.87ABFFF9036C5078.idx
cmake/: riscv64-toolchain.cmake
src/: common.hpp  start.S  util.hpp
src/app/: main.cpp
src/boot/: start.S
src/kernel/: console.cpp  console.hpp  cstring.cpp  cstring.hpp  heap.cpp  heap.hpp  main.cpp  panic.cpp  panic.hpp  physical_page_allocator.cpp  physical_page_allocator.hpp  runtime.cpp  runtime.hpp
src/lib/: algorithm.hpp  array.hpp  expected.hpp  optional.hpp  span.hpp  vector.hpp
src/qemu_virt/: mmio.hpp  syscon.cpp  syscon.hpp  uart.cpp  uart.hpp
src/riscv/: trap.cpp  trap.hpp  trap_entry.S
